zealot_worker_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zealot-worker
  labels:
    app: zealot-worker
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: zealot-worker
